# camoufox-harness

./: .env.example  .gitignore  CLAUDE.md  README.md  SKILL.md  adapt_skills.py  admin.py  daemon.py  helpers.py  install.md  pyproject.toml  run.py
data/plans/: 2026-04-21-browser-harness-features.md  2026-04-21-event-driven-architecture.md
data/specs/: 2026-04-21-browser-harness-features-design.md  2026-04-21-event-driven-architecture-design.md
domain-skills/amazon/: product-search.md
domain-skills/booking-com/: scraping.md
domain-skills/centilebrain/: generate-estimates.md
domain-skills/coursera/: scraping.md
domain-skills/craigslist/: scraping.md
domain-skills/etsy/: scraping.md
domain-skills/facebook/: groups.md  pages.md
domain-skills/fred/: scraping.md
domain-skills/g2/: scraping.md
domain-skills/github/: repo-actions.md  scraping.md
domain-skills/glassdoor/: scraping.md
domain-skills/hackernews/: scraping.md
domain-skills/job-boards/: indeed-glassdoor.md
domain-skills/letterboxd/: scraping.md
domain-skills/medium/: article-hydration.md
domain-skills/news-aggregation/: multi-source.md
domain-skills/ozon/: README.md  product-analysis.md  scam-detection.md  search.md
domain-skills/producthunt/: scraping.md
domain-skills/reddit/: scraping.md
interaction-skills/: CLAUDE.md  README.md  connection.md  cookies.md  cross-origin-iframes.md  dialogs.md  downloads.md  drag-and-drop.md  dropdowns.md  network-requests.md  print-as-pdf.md  shadow-dom.md  uploads.md  viewport.md
references/: api.md  examples.md
(+6 files in other folders)
