[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "camoufox-harness"
version = "0.1.0"
description = "Playwright-based browser harness using Camoufox (Firefox anti-detect)"
requires-python = ">=3.11"
dependencies = [
    "playwright>=1.40.0",
    "camoufox[geoip]>=0.4.0",
]

[project.scripts]
camoufox-harness = "run:main"

[tool.setuptools]
py-modules = ["run", "helpers"]
